--- a/dtl.html
+++ b/dtl.html
@@ -523,10 +523,9 @@
 		            this.syncDataFab.innerHTML = `
 		                <button id="sync-data-btn-header" title="Dropboxからデータを取得" class="tooltip-container">
 		                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-		                        <path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h5V4H4zm0 0l7 7m0 0l7-7m-7 7v5h5v-5h-5z" transform="translate(1 1) scale(0.9)" />
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M9 19l3 3m0 0l3-3m-3 3V10" />
 		                    </svg>
-                            <span class="custom-tooltip tooltip-bottom">Dropboxから最新のデータを取得します</span>
+                            <span class="custom-tooltip tooltip-bottom">Dropboxからデータを取得します</span>
 		                </button>
 		            `;
 		            // 動的に生成したボタンにイベントリスナーを追加
