--- a/dtl.html
+++ b/dtl.html
@@ -125,7 +125,6 @@
 		}
 		#sync-data-btn-floating:hover {
 		    background-color: #f3f4f6;
-            transform: translateY(-2px);
 		}
         #sync-data-btn-floating:active {
             transform: scale(0.95);
@@ -379,7 +378,7 @@
     </main>
 </div>
 
-<div id="sync-button-floating-container" class="fixed bottom-24 right-4 z-40"></div>
+<div id="sync-button-floating-container" class="fixed bottom-24 left-4 z-40"></div>
 
 <div id="floating-task-bar" class="fixed bottom-0 inset-x-0 bg-white shadow-[0_-2px_10px_rgba(0,0,0,0.1)] h-20 px-4 z-50">
 </div>
@@ -526,11 +525,10 @@
 		            this.authStatusEl.textContent = 'Dropboxにログイン済みです。';
 		            // 新しいフローティング同期ボタンを生成
 		            this.syncDataFab.innerHTML = `
-		                <button id="sync-data-btn-floating" class="tooltip-container">
+		                <button id="sync-data-btn-floating">
 		                    <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0011.667 0l3.181-3.183m-4.991 0l-3.182-3.182a8.25 8.25 0 00-11.667 0l-3.182 3.182" />
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M9 19l3 3m0 0l3-3m-3 3V10" />
                             </svg>
-                            <span class="custom-tooltip tooltip-top">Dropboxからデータを取得します</span>
 		                </button>
 		            `;
 		            // 動的に生成したボタンにイベントリスナーを追加
