--- a/dtl.html
+++ b/dtl.html
@@ -122,6 +122,7 @@
             transition: all 0.2s ease-in-out;
         }
         .fab:hover {
+			background-color: #ddd;
             box-shadow: 0 6px 16px rgba(0,0,0,0.2);
         }
 
