--- a/dtl.html
+++ b/dtl.html
@@ -351,7 +351,7 @@
             <div class="bg-white p-6 rounded-lg shadow-md">
                 <h2 class="text-xl font-bold mb-4">リピートタスク管理</h2>
                 <div class="grid grid-cols-1 md:grid-cols-5 gap-4 mb-4 items-end">
-                    <input type="text" id="repeat-task-name" placeholder="タスク名" class="md:col-span-2 p-2 border rounded-lg"  autocomplete="off">
+                    <input type="text" id="repeat-task-name" placeholder="タスク名" class="md:col-span-2 p-2 border rounded-lg"  autocomplete="task-input" data-form-type="other" data-lpignore="true">
                     <div class="grid grid-cols-2 gap-4">
                         <input type="number" id="repeat-task-time" placeholder="見積時間(分)" class="w-full p-2 border rounded-lg">
                         <select id="repeat-task-project" class="w-full p-2 border rounded-lg bg-white"></select>
@@ -484,7 +484,7 @@
     <div class="modal-content p-6 w-full max-w-md">
         <h3 class="text-lg font-bold mb-4">タスクを追加</h3>
         <div class="space-y-4">
-            <input type="text" id="new-task-name" placeholder="タスク名" class="w-full p-2 border rounded-lg" autocomplete="off" >
+            <input type="text" id="new-task-name" placeholder="タスク名" class="w-full p-2 border rounded-lg" autocomplete="task-input" data-form-type="other" data-lpignore="true" >
             <input type="number" id="new-task-time" placeholder="見積時間(分)" class="w-full p-2 border rounded-lg" value="5">
             <select id="new-task-project" class="w-full p-2 border rounded-lg bg-white"></select>
         </div>
@@ -500,7 +500,7 @@
     <div class="modal-content p-6 w-full max-w-md">
         <h3 class="text-lg font-bold mb-4">タスクを編集</h3>
         <div class="space-y-4">
-            <input type="text" id="edit-task-name" placeholder="タスク名" class="w-full p-2 border rounded-lg" autocomplete="off">
+            <input type="text" id="edit-task-name" placeholder="タスク名" class="w-full p-2 border rounded-lg" autocomplete="task-input" data-form-type="other" data-lpignore="true">
             <div class="grid grid-cols-2 gap-4">
                  <input type="number" id="edit-task-time" placeholder="見積時間(分)" class="w-full p-2 border rounded-lg">
                  <select id="edit-task-project" class="w-full p-2 border rounded-lg bg-white"></select>
@@ -518,7 +518,7 @@
                 <div id="task-subtask-content" class="hidden mt-2">
                     <div id="edit-task-subtasks" class="space-y-2 p-2 border rounded-lg bg-gray-50"></div>
                     <div class="flex gap-2 mt-2">
-                        <input type="text" id="new-subtask-name" placeholder="新しいサブタスク名" class="flex-1 p-2 border rounded-lg" autocomplete="off">
+                        <input type="text" id="new-subtask-name" placeholder="新しいサブタスク名" class="flex-1 p-2 border rounded-lg" autocomplete="subtask-input" data-form-type="other" data-lpignore="true">
                         <button id="add-subtask-btn" class="bg-gray-200 hover:bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-lg">追加</button>
                     </div>
                 </div>
@@ -558,7 +558,7 @@
     <div class="modal-content p-6 w-full max-w-lg">
         <h3 class="text-lg font-bold mb-4">リピートタスクを編集</h3>
         <div class="space-y-4">
-            <input type="text" id="edit-repeat-name" placeholder="タスク名" class="w-full p-2 border rounded-lg" autocomplete="off">
+            <input type="text" id="edit-repeat-name" placeholder="タスク名" class="w-full p-2 border rounded-lg" autocomplete="task-input" data-form-type="other" data-lpignore="true">
              <div class="grid grid-cols-2 gap-4">
                 <input type="number" id="edit-repeat-time" placeholder="見積時間(分)" class="w-full p-2 border rounded-lg">
                 <select id="edit-repeat-project" class="w-full p-2 border rounded-lg bg-white"></select>
@@ -576,7 +576,7 @@
                 <div id="repeat-subtask-content" class="hidden mt-2">
                     <div id="edit-repeat-subtasks" class="space-y-2 mt-1 p-2 border rounded-lg bg-gray-50"></div>
                     <div class="flex gap-2 mt-2">
-                        <input type="text" id="new-repeat-subtask-name" placeholder="新しいサブタスク名" class="flex-1 p-2 border rounded-lg" autocomplete="off">
+                        <input type="text" id="new-repeat-subtask-name" placeholder="新しいサブタスク名" class="flex-1 p-2 border rounded-lg" autocomplete="subtask-input" data-form-type="other" data-lpignore="true">
                         <button id="add-repeat-subtask-btn" class="bg-gray-200 hover:bg-gray-300 text-gray-700 font-bold py-2 px-4 rounded-lg">追加</button>
                     </div>
                 </div>
