--- a/dtl.html
+++ b/dtl.html
@@ -91,8 +91,9 @@
 			position: absolute;
 			left: 0;
 			right: 0;
-			bottom: 0; /* デフォルトは0だが、JSが上書きする */
-			transition: bottom 0.15s ease-out, transform 0.25s ease-in-out;
+			top: 0;
+			will-change: transform;
+			transition: transform 80ms linear, opacity 0.25s ease-in-out; 
 		}
 
 		#floating-task-bar.active {
@@ -132,13 +133,14 @@
         }
 
         /* 同期ボタンコンテナのスタイル */
-        #sync-button-floating-container {
-            position: fixed;
-            bottom: 96px;
-            left: 16px;
-            z-index: 40;
-            transition: all 0.3s ease-in-out;
-        }
+		#sync-button-floating-container {
+		    position: absolute; /* fixedからabsoluteに変更し、JSで制御 */
+		    left: 16px;
+		    z-index: 40;
+		    will-change: transform; /* 描画パフォーマンスを最適化 */
+		    /* スクロール追従を滑らかにするためのtransition */
+		    transition: transform 80ms linear, opacity 0.3s ease-in-out;
+		}
 
         /* タスク追加ボタンコンテナのスタイル (スマホでは非表示) */
         #add-task-floating-container {
@@ -150,6 +152,8 @@
         /* PC表示用の調整 (画面幅が769px以上の場合) */
         @media (min-width: 769px) {
             #sync-button-floating-container {
+				position: fixed;
+		        transform: none !important;
                 bottom: 24px;
                 left: 24px;
             }
@@ -621,34 +625,56 @@
 
 <script>
 
-	// --- フローティングバーのキーボード追従対策 ---
-	function setupFloatingBarStick() {
+	// --- フローティング要素のキーボード追従と滑らかスクロール対策 ---
+	function setupFloatingElementsStick() {
 	    const bar = document.getElementById('floating-task-bar');
-	    if (!bar) return;
-	
-	    let ticking = false; // rAF中に多重呼び出しを防ぐ
-	
-	    function updateBar() {
-	        const scrollBottom = window.scrollY + window.innerHeight;
+	    const syncButtonContainer = document.getElementById('sync-button-floating-container');
+
+	    if (!bar || !syncButtonContainer) return;
+
+	    let ticking = false;
+
+	    function updateElementsPosition() {
+	        // visualViewport APIを優先的に使い、キーボード表示時のビューポートサイズ変更に対応
+	        const viewport = window.visualViewport || {
+	            height: window.innerHeight,
+	            offsetTop: window.scrollY
+	        };
+
+	        const viewportTop = viewport.offsetTop;
+	        const viewportHeight = viewport.height;
+
+	        // フローティングバーの位置計算 (transform: translateYを使用)
 	        const barHeight = bar.offsetHeight;
-	        // 画面最下部にバーを吸着させる
-	        bar.style.top = (scrollBottom - barHeight) + "px";
+	        const barY = viewportTop + viewportHeight - barHeight;
+	        bar.style.transform = `translateY(${barY}px)`;
+	        
+	        // 同期ボタンの位置計算 (スマホ表示時のみ)
+	        if (isMobile()) {
+	            const syncButtonHeight = syncButtonContainer.offsetHeight;
+	            // フローティングバーの上、16pxのマージンを空けて配置
+	            const syncButtonY = viewportTop + viewportHeight - barHeight - syncButtonHeight - 16;
+	            syncButtonContainer.style.transform = `translateY(${syncButtonY}px)`;
+	        } else {
+	             // PC表示ではtransformをリセット（CSSでfixedになるため）
+	             syncButtonContainer.style.transform = 'none';
+	        }
 	    }
-	
+
 	    function requestTick() {
 	        if (!ticking) {
 	            requestAnimationFrame(() => {
-	                updateBar();
+	                updateElementsPosition();
 	                ticking = false;
 	            });
 	            ticking = true;
 	        }
 	    }
-	
+
 	    // 初期実行
-	    updateBar();
-	
-	    // イベント発生ごとに requestTick() を呼ぶ
+	    updateElementsPosition();
+
+	    // イベントリスナー
 	    window.addEventListener('scroll', requestTick, { passive: true });
 	    window.addEventListener('resize', requestTick);
 	    if (window.visualViewport) {
@@ -656,7 +682,6 @@
 	        window.visualViewport.addEventListener('scroll', requestTick);
 	    }
 	}
-
 
     document.addEventListener('DOMContentLoaded', () => {
 
@@ -1303,7 +1328,6 @@
 	        return subtasks;
 	    }
 
-
         // Init
         function init() {
             state.viewDate = getFormattedDate(new Date());
@@ -1328,6 +1352,8 @@
                 }
 				renderFloatingTaskBar();
             });
+
+            setupFloatingElementsStick(); 
         }
 
 	function handleUrlScheme() {
@@ -3624,8 +3650,6 @@
         const totalRemainingMinutes = unfinishedTasks.reduce((sum, task) => sum + (task.estimatedTime || 0), 0);
         totalEstimatedEndTimeEl.textContent = totalRemainingMinutes > 0 ? formatClockTime(new Date(now.getTime() + totalRemainingMinutes * 60 * 1000)) : '完了';
     }
-
-	setupFloatingBarStick();
 
 	function renderFloatingTaskBar() {
 	    const bar = document.getElementById('floating-task-bar');
