--- a/dtl.html
+++ b/dtl.html
@@ -153,6 +153,7 @@
             #sync-button-floating-container {
 				position: fixed;
 		        transform: none !important;
+				top: auto;
                 bottom: 24px;
                 left: 24px;
             }
