--- a/workflowy-sender.html
+++ b/workflowy-sender.html
@@ -26,21 +26,26 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     background-color: var(--bg-color);
     color: var(--text-color);
-    height: 100vh;
+    /* 修正: height: 100vh; から 100%; に変更し、overflow: hidden; を削除 */
+    height: 100%; 
     display: flex;
     justify-content: center;
-    overflow: hidden;
+    position: relative; 
   }
 
   .app-container {
     width: 100%;
     max-width: var(--app-max-width);
-    height: 100%;
+    /* 修正: height: 100%; から 100vh; に変更 (ビューポートいっぱいに) */
+    height: 100vh; 
     background-color: var(--app-bg);
     display: flex;
     flex-direction: column;
     position: relative;
     box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    /* 修正: スクロールを許可 */
+    overflow-y: auto; 
+    -webkit-overflow-scrolling: touch;
   }
 
   /* --- Header --- */
@@ -53,6 +58,9 @@
     justify-content: space-between;
     padding: 0 15px;
     flex-shrink: 0;
+    position: sticky; 
+    top: 0;
+    z-index: 10;
   }
 
   .app-title {
@@ -72,7 +80,8 @@
     display: flex;
     flex-direction: column;
     padding: 15px;
-    overflow-y: auto;
+    /* 修正: 下部バー固定のため、padding-bottomを調整 */
+    padding-bottom: calc(15px + var(--footer-height));
     background: var(--app-bg);
   }
 
@@ -97,7 +106,7 @@
 
   #editor-main {
     flex: 1;
-    font-size: 16px; /* JSで動的に設定されるためCSSはデフォルト値 */
+    font-size: 16px; 
     line-height: 1.6;
   }
 
@@ -112,6 +121,12 @@
     padding: 8px 10px;
     flex-shrink: 0;
     gap: 8px;
+    /* 修正: キーボードの上に表示するための固定配置 */
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    max-width: var(--app-max-width);
+    z-index: 100;
   }
 
   .btn-group { 
@@ -144,6 +159,10 @@
   @media (max-width: 600px) {
     .btn-text { display: none; }
     .btn { padding: 8px; font-size: 16px; }
+    /* 修正: モバイル時も下部バーの最大幅を適用 */
+    .bottom-bar {
+      max-width: 100%; 
+    }
   }
 
   @media (min-width: 601px) {
@@ -157,7 +176,8 @@
   /* --- Dropdown Menu --- */
   .dropdown-menu {
     position: absolute;
-    bottom: var(--footer-height);
+    /* 修正: 固定された bottom-bar の上に来るように bottom の値を調整 */
+    bottom: calc(var(--footer-height) + 5px); 
     left: 80px;
     background: white;
     border: 1px solid var(--border-color);
@@ -204,7 +224,7 @@
     background: #fff;
     width: 100%;
     height: 100%;
-    max-width: var(--app-max-width); /* モーダルも最大幅を適用 */
+    max-width: var(--app-max-width); 
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -212,7 +232,6 @@
     -webkit-overflow-scrolling: touch;
   }
   
-  /* モーダルが全画面でない場合の調整 (念のため) */
   @media (min-width: 601px) {
     .options-panel.active { align-items: center; justify-content: center; }
     .options-content { height: 90%; border-radius: 8px; }
@@ -229,6 +248,7 @@
     background: var(--app-bg);
     position: sticky;
     top: 0;
+    z-index: 10;
   }
 
   .options-header h3 {
@@ -267,6 +287,9 @@
     gap: 10px;
     flex-shrink: 0;
     background: var(--app-bg);
+    position: sticky;
+    bottom: 0;
+    z-index: 10;
   }
 
   h3 { margin: 0 0 10px 0; font-size: 18px; }
@@ -318,7 +341,8 @@
   .btn-add-tpl { background: var(--accent-color); color: white; padding: 8px 12px; font-size: 12px; }
 
   .toast {
-    position: fixed; bottom: 90px; left: 50%; transform: translateX(-50%);
+    /* 修正: bottom: 90px から bottom: calc(var(--footer-height) + 30px); に変更 */
+    position: fixed; bottom: calc(var(--footer-height) + 30px); left: 50%; transform: translateX(-50%);
     background: rgba(40,40,40,0.9); color: white;
     padding: 8px 16px; border-radius: 20px; font-size: 14px;
     opacity: 0; transition: opacity 0.3s; pointer-events: none;
@@ -367,9 +391,7 @@
 
   <div class="bottom-bar">
     <div class="btn-group">
-      <!-- 📅ボタン: 日付のみ挿入 -->
       <button class="btn btn-icon btn-secondary" id="btn-date" title="日付">📅</button>
-      <!-- ⏰ボタン: 時刻のみ挿入 (Alt+Tはトグル) -->
       <button class="btn btn-icon btn-secondary" id="btn-time-toggle" title="時刻">⏰</button>
       <button class="btn btn-icon btn-secondary" id="btn-templates" title="テンプレート">📋</button>
       <button class="btn btn-icon btn-danger" id="btn-clear" title="全削除">🗑️</button>
@@ -390,7 +412,6 @@
   <div class="toast" id="toast"></div>
 </div>
 
-<!-- Options Panel -->
 <div class="options-panel" id="options-modal">
   <div class="options-content">
     <div class="options-header">
@@ -459,7 +480,7 @@
 
 <script>
 /**
- * Workflowy Sender v6.4 - ボタン固定、Alt+Tで日付/時刻トグル
+ * Workflowy Sender v6.5 - モバイルキーボード対応
  */
 
 const STORAGE_KEY = 'workflowy_sender_config_v4';
@@ -524,6 +545,7 @@ function init() {
   applyTemplate(config.templates[0]);
   applyFontSize();
   
+  // 修正: 起動時の自動フォーカスを復活 (すぐにキーボードを立ち上げる)
   setTimeout(() => dom.editorMain.focus(), 100);
 
   // イベントリスナー設定
@@ -542,13 +564,13 @@ function init() {
   // 📅ボタン: 日付のみを挿入 (固定)
   if (dom.btnDate) dom.btnDate.addEventListener('click', () => {
     insertDateTime(config.dateFormat);
-    resetToggleState(); // ボタン操作でトグル状態をリセット
+    resetToggleState(); 
   }); 
   
   // ⏰ボタン: 時刻のみを挿入 (固定)
   if (dom.btnTimeToggle) dom.btnTimeToggle.addEventListener('click', () => {
     insertDateTime(config.timeFormat);
-    resetToggleState(); // ボタン操作でトグル状態をリセット
+    resetToggleState(); 
   }); 
   
   if (dom.btnTemplates) dom.btnTemplates.addEventListener('click', toggleTemplateMenu);
@@ -573,18 +595,16 @@ function applyFontSize() {
 
 function handleKeydown(e) {
   // Ctrl/Cmd + Enter で送信
-  if ((e.ctrlKey || e.metaKey) && e.key === 'Enter') {
+  if ((e.ctrlKey || e.altKey) && e.key === 'Enter') { 
     e.preventDefault();
     handleSend();
     return;
   }
   
-  // Alt + D のショートカットは削除済み
-  
   // Alt + T で日付/時刻をトグル挿入
   if (e.altKey && (e.key === 't' || e.key === 'T' || e.key === 'ã‹')) { 
     e.preventDefault();
-    insertDateOrTimeToggle(); // トグル関数を呼び出し
+    insertDateOrTimeToggle(); 
     return;
   }
 }
@@ -709,8 +729,6 @@ function insertDateOrTimeToggle() {
       resetToggleState();
     }
   }, 100);
-  
-  // トグル処理時のトースト通知は削除
 }
 
 
@@ -737,7 +755,7 @@ function processPlaceholders(text) {
 
 function applyTemplate(tpl) {
   if (!tpl) return;
-  resetToggleState(); // テンプレート適用時はトグル状態をリセット
+  resetToggleState(); 
   let mainContent = processPlaceholders(tpl.text || '');
   const cursorMarker = '{{cursor}}';
   
@@ -881,7 +899,7 @@ async function handleSend() {
   dom.btnSend.disabled = true;
   dom.spinner.style.display = 'inline-block';
 
-  resetToggleState(); // 送信時はトグル状態をリセット
+  resetToggleState(); 
 
   const convertedName = convertToWorkflowyBullets(text);
 
