--- a/mandalart.html
+++ b/mandalart.html
@@ -238,7 +238,7 @@
 
     <!-- Sidebar (File Manager) -->
     <div id="sidebar-overlay" onclick="toggleSidebar()" class="fixed inset-0 bg-black/20 z-40 hidden transition-opacity"></div>
-    <aside id="sidebar" class="fixed top-0 right-0 h-full w-80 bg-white shadow-2xl z-50 transform transition-transform duration-300 translate-x-full flex flex-col">
+    <aside id="sidebar" class="fixed top-0 right-0 h-full w-80 bg-white z-50 transform transition-transform duration-300 translate-x-full flex flex-col">
         <div class="p-4 border-b flex justify-between items-center bg-slate-50">
             <h2 class="font-bold text-lg">保存されたチャート</h2>
             <button onclick="toggleSidebar()" class="text-slate-400 hover:text-slate-600"><i class="fa-solid fa-xmark"></i></button>
