--- a/header.html
+++ b/header.html
@@ -6,6 +6,7 @@
                 <li><a href="./article?id=e884fec2-302e-eeec-9214-8e271fe22a69" title="about"><i class="fa fa-info" aria-hidden="true"></i></a></li>
                 <li><a href="./piece" title="piece"><i class="fa fa-puzzle-piece" aria-hidden="true"></i></a></li>
                 <li><a href="./taglist" title="taglist"><i class="fa fa-tags" aria-hidden="true"></i></a></li>
+                <li><a href="https://morvra.github.io/rss.xml" title="RSS"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
                 <li><a href="./search" title="search"><i class="fa fa-search" aria-hidden="true"></i></a></li>
             </ul>
         </nav>
